Fix header visibility timer

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -48,6 +48,9 @@
             }
         }
     }
+    .headerActivateArea {
+        height: 20px;
+    }
 }
 
 .ant-menu-horizontal {
